<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.6">
  <DUT Name="WaveformPoint" Id="{370468da-dde9-00a0-0adf-567af530300a}">
    <Declaration><![CDATA[TYPE WaveformPoint :
STRUCT
	TransitionType		:	eTransitionType;	
	TargetValue			:	LREAL;				//Value to be reached in "Duration" PLC cycles
	Duration			:	UINT;				//Number of PLC cycles during which the "TargetValue" must be reached
	Shape				:	LREAL;				//Define curve shape
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>